[package]
name = "versions"
version = "0.1.0"
edition = "2021"

[dependencies]
commons = { git = "ssh://git@github.com/jkaraskiewicz/commons.git", version = "0.1.4" }
clap = { version = "4.5.29", features = ["derive", "string"] }
serde = { version = "1.0.217", features = ["derive"] }
anyhow = "1.0.95"
toml = "0.8.20"
thiserror = "2.0.12"
git2 = "0.19.0"
